fixed z-index on displayed menu in mobile version

--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ header {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        z-index: 10;
     }
     nav li {
         list-style-type: none;
@@ -291,6 +292,7 @@ h1 {
 .image-with-overlay {
     position: relative;
     margin-bottom: 0.5rem;
+    z-index: 5;
 }
 /*LATEST RECIPES Desktop version*/
 @media only screen and (min-width: 768px) {
